--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
                 I am  a software engineer passionate about developing applications, and solving 
                 complex problems. I am also skilled in networking and interested in distrubted systems. 
             </p>
-            <a href="" class="main-btn">
-                <span class = "btn-text"> Download CV</span>
-                <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
-            </a>
+            <div class="btn-con">
+                <a href="" class="main-btn">
+                    <span class = "btn-text"> Download CV</span>
+                    <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
+                </a>
+            </div>
         </div>
     </div>
     </header>
