--- a/index.html
+++ b/index.html
@@ -45,6 +45,57 @@
             <div class="main-title">
                 <h2>About <span>me</span><span class="big-text">my stats</span></h2>
             </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information About me</h4>
+                    <p>
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                    <div class="btn-con">
+                        <a href="" class="main-btn">
+                            <span class = "btn-text"> Download CV</span>
+                            <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Projects <br/> Completed</p>
+                        </div>
+                       </div>
+                       <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Projects <br/> Completed</p>
+                        </div>
+                       </div>
+                       <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Projects <br/> Completed</p>
+                        </div>
+                       </div>
+                       <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Projects <br/> Completed</p>
+                        </div>
+                       </div>
+                </div>
+
+            
+            
+            </div>
+            <div class="about-stats">
+                <h4 class="stat-title">
+                    My Skills
+                </h4>
+            </div>
+
+
         </section>
         <section class="section sec3 portfolio" id = "portfolio"></section>
         <section class="section sec4 blogs" id = "blogs"></section>
