--- a/index.html
+++ b/index.html
@@ -90,9 +90,64 @@
             
             </div>
             <div class="about-stats">
-                <h4 class="stat-title">
-                    My Skills
-                </h4>
+                <h4 class="stat-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <div class="prog-title">html5</div>
+                        <div class="progress-con">
+                            <p class="prog text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">bootstrap</div>
+                        <div class="progress-con">
+                            <p class="prog text">60%</p>
+                            <div class="progress">
+                                <span class="bootstrap"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">CSS</div>
+                        <div class="progress-con">
+                            <p class="prog text">80%</p>
+                            <div class="progress">
+                                <span class="css"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">javascript</div>
+                        <div class="progress-con">
+                            <p class="prog text">60%</p>
+                            <div class="progress">
+                                <span class="javascript"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">angular</div>
+                        <div class="progress-con">
+                            <p class="prog text">60%</p>
+                            <div class="progress">
+                                <span class="angular"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">springboot</div>
+                        <div class="progress-con">
+                            <p class="prog text">60%</p>
+                            <div class="progress">
+                                <span class="springboot"></span>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
             </div>
 
 
