--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </p>
                     <div class="btn-con">
                         <a href="" class="main-btn">
-                            <span class = "btn-text"> Download CV</span>
+                            <span class = "btn-text">Download CV</span>
                             <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
                         </a>
                     </div>
@@ -149,7 +149,72 @@
                     
                 </div>
             </div>
-
+            <h4 class = "stat-title"> My Timeline</h4>
+            <div class="time-line">
+                <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div> <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div> <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div> <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div> <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 2023 - present </p>
+                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-text">
+                        I am a software engineer passionate about developing applications, and solving 
+                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                    </p>
+                </div>
+            </div>
+            
 
         </section>
         <section class="section sec3 portfolio" id = "portfolio"></section>
