--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 A software engineer.
             </h1>
             <p>
-                I am  a software engineer passionate about developing applications, and solving 
+                I am  a software engineer passionate about developing performant applications, and solving 
                 complex problems. I am also skilled in networking and interested in distrubted systems. 
             </p>
             <div class="btn-con">
@@ -50,10 +50,13 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                        Currently enrolled in the engineering school IMT atlantique, i am majoring in the
+                        computer science. During my formation, I have been studying various subjects and
+                        working on numerous projects, including : networking, embedded systems with VHDL, 
+                        cryptography, AI, signal processing, sociology, entrepreneurship and more. While my main interests are software developement
+                        and networking, i am always excited to leverage my capabilities and knowledge to solve complex problems. 
                     </p>
-                    <div class="btn-con">
+                    <div class="btn-con" style="width: 150%; margin-top: 1rem;">
                         <a href="" class="main-btn">
                             <span class = "btn-text">Download CV</span>
                             <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
@@ -63,26 +66,26 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">560+</p>
+                            <p class="large-text">10+</p>
                             <p class="small-text">Projects <br/> Completed</p>
                         </div>
                        </div>
                        <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">560+</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="large-text">10+</p>
+                            <p class="small-text">programming <br/> languages </p>
                         </div>
                        </div>
                        <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">560+</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="large-text">4</p>
+                            <p class="small-text">Spoken <br/> Languages</p>
                         </div>
                        </div>
                        <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">560+</p>
-                            <p class="small-text">Projects <br/> Completed</p>
+                            <p class="large-text">5</p>
+                            <p class="small-text">Certificats <br/> Obtained</p>
                         </div>
                        </div>
                 </div>
@@ -114,7 +117,7 @@
                     <div class="progress-bar">
                         <div class="prog-title">CSS</div>
                         <div class="progress-con">
-                            <p class="prog text">80%</p>
+                            <p class="prog text">90%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
@@ -123,7 +126,7 @@
                     <div class="progress-bar">
                         <div class="prog-title">javascript</div>
                         <div class="progress-con">
-                            <p class="prog text">60%</p>
+                            <p class="prog text">70%</p>
                             <div class="progress">
                                 <span class="javascript"></span>
                             </div>
@@ -156,64 +159,12 @@
                     <div class="t1-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
+                    <p class="t1-duration"> 1/6/2022 - 30/6/2022 : Maroc: Marrackech </p>
+                    <h5>professional immersion internship <span> Arborescence</span></h5>
                     <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                        Within the company, I was tasked with several duties: managing the inventory, planting and watering plants and trees, assisting customers with sales, ensuring proper arrangement of merchandise to attract customers, and more. During this experience, I had direct contact with several positions, and I learned about the overall structure of operations, ranging from administration to labor work.
                     </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="t1-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
-                    <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
-                    </p>
-                </div> <div class="timeline-item">
-                    <div class="t1-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
-                    <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
-                    </p>
-                </div> <div class="timeline-item">
-                    <div class="t1-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
-                    <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
-                    </p>
-                </div> <div class="timeline-item">
-                    <div class="t1-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
-                    <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
-                    </p>
-                </div> <div class="timeline-item">
-                    <div class="t1-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="t1-duration"> 2023 - present </p>
-                    <h5>Software Devloper <span> Microsoft</span></h5>
-                    <p class="t1-text">
-                        I am a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
-                    </p>
-                </div>
+                </div> 
             </div>
             
 
@@ -221,10 +172,12 @@
         <section class="section sec3 portfolio" id = "portfolio">
 
 
+
             <div class="main-title">
                 <h2>My <span>Portfolio</span> <span class="big-text">my projects</span></h2>
             </div>
             <div class="general-body">
+
 
                 <div class="general-item">
 
@@ -235,8 +188,8 @@
                     <h5>Simulation of a Gar station</h5>
                     <div class="general-description" >
                     <p >
-                        I am  a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+                        An academic project that simulates a railway where we apply concurrency principles to control the actions of trains. 
+
                     </p>
                 </div>
                 </div>
@@ -246,23 +199,31 @@
 
                         <img src="img/petri.png" alt="trains">
                     </div>
-                    <h5>Simulation of a Gar station</h5>
+                    <h5>Simulation of a PetriNetwork</h5>
                     <div class="general-description" >
+
                     <p >
-                        I am  a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+
+                       A project where we developed a mathematical model called "petri network" using the concepts of 
+                       object oriented programing
                     </p>
                 </div>
                 </div> <div class="general-item">
 
                     <div class="general-image">
+
                         <img src="img/Drill.png" alt="trains">
                     </div>
-                    <h5>Simulation of a Gar station</h5>
+                    <h5>Size reduction of a machine learning model for drilling operations </h5>
                     <div class="general-description" >
+
+
                     <p >
-                        I am  a software engineer passionate about developing applications, and solving 
-                        complex problems. I am also skilled in networking and interested in distrubted systems. 
+
+
+                       In collaboration with the company <a href="https://www.slb.com/" style="text-decoration: underline; color: blue ;" >SLB</a>
+                       I worked in a group of 6 students on reducing a the size of a classification model used in drilling operations and deploy it on a embedded system. 
+                       I developed scripts to reduce the size of the model from around 600 kb to 100kb. 
                     </p>
                 </div>
                 </div>
@@ -272,7 +233,8 @@
         <section class="section sec4 blogs" id = "blogs">
             <div class="main-title">
                 <h2>My <span>Blog</span> <span class="big-text">my articles</span></h2>
-                <div class="general-body">
+      <!--           <div class="general-body">
+                
                 <div class="general-item">
 
                     <div class="general-image">
@@ -312,7 +274,7 @@
                     </p>
                     </div>
                 </div>
-                </div>
+                </div> -->
             </div>
 
         </section>
@@ -338,7 +300,7 @@
                     </div>
 
                 </div>
-                <div class="btn-send">
+                <div class="btn-send" >
                     <a href="" class="main-btn">
                         <span class = "btn-text"> Send</span>
                     </a>
