Update index.html : improve bio description.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Currently enrolled in the engineering school IMT atlantique, i am majoring in the
-                        computer science. During my formation, I have been studying various subjects and
-                        working on numerous projects, including : networking, embedded systems with VHDL, 
-                        cryptography, AI, signal processing, sociology, entrepreneurship and more. While my main interests are software developement
-                        and networking, i am always excited to leverage my capabilities and knowledge to solve complex problems. 
+             Enrolled in IMT Atlantique's engineering school, majoring in computer science. Studied diverse subjects and worked on various projects like networking, embedded systems, cryptography, AI, signal processing, sociology, and entrepreneurship. Main interests include software development and networking, always ready to tackle complex problems.
+
                     </p>
                     <div class="btn-con" style="width: 150%; margin-top: 1rem;">
                         <a href="" class="main-btn">
