Update index.html : improve a project description.

--- a/index.html
+++ b/index.html
@@ -211,16 +211,16 @@
 
                         <img src="img/Drill.png" alt="trains">
                     </div>
-                    <h5>Size reduction of a machine learning model for drilling operations </h5>
+                    <h5>Size reduction of a machine learning model</h5>
                     <div class="general-description" >
 
 
                     <p >
 
 
-                       In collaboration with the company <a href="https://www.slb.com/" style="text-decoration: underline; color: blue ;" >SLB</a>
-                       I worked in a group of 6 students on reducing a the size of a classification model used in drilling operations and deploy it on a embedded system. 
-                       I developed scripts to reduce the size of the model from around 600 kb to 100kb. 
+                       A project for the company <a href="https://www.slb.com/" style="text-decoration: underline; color: blue ;" >SLB</a>
+                       Reducing the size of a classification model used in drilling operations to deploy it on a embedded system. 
+                       
                     </p>
                 </div>
                 </div>
