Update index.html : correct the description of the train project

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="general-image">
                         <img src="img/trains.png" alt="trains">
                     </div>
-                    <h5>Simulation of a Gar station</h5>
+                    <h5>Simulation of a Train station</h5>
                     <div class="general-description" >
                     <p >
                         An academic project that simulates a railway where we apply concurrency principles to control the actions of trains. 
