--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 complex problems. I am also skilled in networking and interested in distrubted systems. 
             </p>
             <div class="btn-con">
-                <a href="" class="main-btn">
+                <a href="CV-Zahdi.Mohcine.pdf" class="main-btn">
                     <span class = "btn-text"> Download CV</span>
                     <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
                 </a>
@@ -57,7 +57,7 @@
                         and networking, i am always excited to leverage my capabilities and knowledge to solve complex problems. 
                     </p>
                     <div class="btn-con" style="width: 150%; margin-top: 1rem;">
-                        <a href="" class="main-btn">
+                        <a href="CV-Zahdi.Mohcine.pdf" class="main-btn">
                             <span class = "btn-text">Download CV</span>
                             <span class = "btn-icon"><i class="fas fa-download"> </i> </span>
                         </a>
@@ -281,31 +281,28 @@
         <section class="section sec5 contact" id = "contact">
             <div class="main-title">
                 <h2> <span>Contact Me</span> <span class="big-text">send a message</span></h2>
-                <div class="contact-body">
+                <form class="contact-body" action="https://formspree.io/f/xgegponk" method="post">
 
                     <div class="left-container">
                         <h5>Name</h5>
-                        <input class="input-contact" type="text" placeholder="Enter your name">
+                        <input class="input-contact" type="text" id="name" name="name" required placeholder="Enter your name">
                         <h5>Email</h5>
-                        <input class="input-contact" type="text" placeholder="Enter your email">  
+                        <input class="input-contact" type="text" id="email" name="email" required placeholder="Enter your email">  
                         <h5>Website</h5>
-                        <input class="input-contact" type="text" placeholder="Enter your website">
+                        <input class="input-contact" type="text" id="website" name="website" placeholder="Enter your website">
                     </div>
                     <div class="right-container">
                         <h5>Subject</h5>
-                        <input class="input-contact" type="text" placeholder="Enter your subject">
+                        <input class="input-contact" type="text" id="subject" name="subject" required placeholder="Enter your subject">
                         <h5>Message</h5>
-                        <textarea class="input-message" type="text" placeholder="Enter your message"></textarea>
+                        <textarea class="input-message" type="text" id="message" name="message" required placeholder="Enter your message"></textarea>
                         
                     </div>
-
                 </div>
                 <div class="btn-send" >
-                    <a href="" class="main-btn">
-                        <span class = "btn-text"> Send</span>
-                    </a>
+                    <button type="submit"  class="main-btn" style="background-color: inherit;" > <span class="btn-text" style="font-size: large;"> Send </span> </button>
                 </div>
-            </div>
+            </form>
             
         </section>
     </main>
