--- a/index.html
+++ b/index.html
@@ -223,6 +223,27 @@
                        
                     </p>
                 </div>
+
+            </div> <div class="general-item">
+
+                <div class="general-image">
+
+                    <img src="img/project-manager.png" alt="trains">
+                </div>
+                <h5>A full stack application to manage projects</h5>
+                <div class="general-description" >
+
+
+                <p >
+
+
+                   A full stack CRUD application  aims to manage personnal project. It comes with several features including : project state labeling
+                   (Done - In progress - Suspended), account login, CRUD operations. It is build using the 
+                   MVC architecture and routing features of Angular, with a service - controller -repisitory backend using nest.js 
+                   that stores data by 
+                   
+                </p>
+            </div>
                 </div>
             </div>
 
