correct the project-management description

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                    A full stack CRUD application  aims to manage personnal project. It comes with several features including : project state labeling
                    (Done - In progress - Suspended), account login, CRUD operations. It is build using the 
                    MVC architecture and routing features of Angular, with a service - controller -repisitory backend using nest.js 
-                   that stores data by 
+                   that stores data using TypeORM on a postgresql database.
                    
                 </p>
             </div>
