Update full stack app description

--- a/index.html
+++ b/index.html
@@ -237,11 +237,9 @@
                 <p >
 
 
-                   A full stack CRUD application  aims to manage personnal project. It comes with several features including : project state labeling
-                   (Done - In progress - Suspended), account login, CRUD operations. It is build using the 
-                   MVC architecture and routing features of Angular, with a service - controller -repisitory backend using nest.js 
-                   that stores data using TypeORM on a postgresql database.
-                   
+                 A full-stack CRUD application designed to manage personal projects. It offers various features, including project state labeling (Done, In Progress, Suspended),
+                user account login, and CRUD operations. The application is built using the MVVM architecture and routing features of Angular on the frontend, with a backend implemented in Nest.js.
+                The backend utilizes TypeORM to interact with a PostgreSQL database for storing data.
                 </p>
             </div>
                 </div>
