add some links to projects

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
                     <div class="general-image">
-                        <img src="img/trains.png" alt="trains">
+                        <a href="https://github.com/MohcineProject/Trains"><img src="img/trains.png"  alt="trains"></a>
                     </div>
                     <h5>Simulation of a Train station</h5>
                     <div class="general-description" >
@@ -194,7 +194,7 @@
 
                     <div class="general-image">
 
-                        <img src="img/petri.png" alt="trains">
+                     <a href="https://github.com/MohcineProject/r-seau-de-p-tri">   <img src="img/petri.png" alt="trains"></a>
                     </div>
                     <h5>Simulation of a PetriNetwork</h5>
                     <div class="general-description" >
@@ -209,7 +209,7 @@
 
                     <div class="general-image">
 
-                        <img src="img/Drill.png" alt="trains">
+                        <img class="source-not-available" src="img/Drill.png" alt="trains">
                     </div>
                     <h5>Size reduction of a machine learning model</h5>
                     <div class="general-description" >
