adding another link to the projects

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                 <div class="general-image">
 
-                    <img src="img/project-manager.png" alt="trains">
+                  <a href="https://github.com/MohcineProject/Projects-management">  <img src="img/project-manager.png" alt="trains"></a>
                 </div>
                 <h5>A full stack application to manage projects</h5>
                 <div class="general-description" >
