Update the portfolio
- Include recent professional updates

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                        </div>
                        <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">5</p>
+                            <p class="large-text">+5</p>
                             <p class="small-text">Certificats <br/> Obtained</p>
                         </div>
                        </div>
@@ -105,7 +105,7 @@
                     <div class="progress-bar">
                         <div class="prog-title">bootstrap</div>
                         <div class="progress-con">
-                            <p class="prog text">60%</p>
+                            <p class="prog text">70%</p>
                             <div class="progress">
                                 <span class="bootstrap"></span>
                             </div>
@@ -132,7 +132,7 @@
                     <div class="progress-bar">
                         <div class="prog-title">angular</div>
                         <div class="progress-con">
-                            <p class="prog text">60%</p>
+                            <p class="prog text">70%</p>
                             <div class="progress">
                                 <span class="angular"></span>
                             </div>
@@ -147,7 +147,24 @@
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="progress-bar">
+                        <div class="prog-title">Django</div>
+                        <div class="progress-con">
+                            <p class="prog text">70%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="prog-title">MySQL</div>
+                        <div class="progress-con">
+                            <p class="prog text">90%</p>
+                            <div class="progress">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <h4 class = "stat-title"> My Timeline</h4>
@@ -156,11 +173,20 @@
                     <div class="t1-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="t1-duration"> 1/6/2022 - 30/6/2022 : Maroc: Marrackech </p>
+                    <p class="t1-duration"> 1/6/2022 - 30/6/2022 : Morroco: Marrackech </p>
                     <h5>professional immersion internship <span> Arborescence</span></h5>
                     <p class="t1-text">
                         Within the company, I was tasked with several duties: managing the inventory, planting and watering plants and trees, assisting customers with sales, ensuring proper arrangement of merchandise to attract customers, and more. During this experience, I had direct contact with several positions, and I learned about the overall structure of operations, ranging from administration to labor work.
                     </p>
+                </div> 
+                <div class="timeline-item">
+                    <div class="t1-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="t1-duration"> 3/6/2024 - 30/8/2024 : France: Brest </p>
+                    <h5>Full stack engineer internship <span> IMT atlantique </span></h5>
+                    <p class="t1-text">
+                        For my internship, I took part in the project SAVA, a web application that helps teachers track their students' performance, organize class tasks, and answer their questions more efficiently. The project is not completed and contains several bugs and issues that need to be fixed. In my role, I am currently working on the following tasks: reverse engineering the project to establish the underlying infrastructure and look for enhancements, documenting the non-functional parts of the project and detecting anomalies to correct them, and finally enhancing the overall project.                    </p>
                 </div> 
             </div>
             
@@ -228,18 +254,17 @@
 
                 <div class="general-image">
 
-                  <a href="https://github.com/MohcineProject/Projects-management">  <img src="img/project-manager.png" alt="trains"></a>
+                  <a href="https://github.com/MohcineProject/Quiz-App">  <img src="img/Quizz-image.png" height="2048px" width="2048px" alt="trains"></a>
                 </div>
-                <h5>A full stack application to manage projects</h5>
+                <h5>A full stack application to manage quizzes </h5>
                 <div class="general-description" >
 
 
                 <p >
 
 
-                 A full-stack CRUD application designed to manage personal projects. It offers various features, including project state labeling (Done, In Progress, Suspended),
-                user account login, and CRUD operations. The application is built using the MVVM architecture and routing features of Angular on the frontend, with a backend implemented in Nest.js.
-                The backend utilizes TypeORM to interact with a PostgreSQL database for storing data.
+                 A full-stack CRUD application designed to create and manage quizzes. It is built using angular for the front-end, Django for the backend, with django rest framework to handle 
+                 http requests, and MySQL as database. 
                 </p>
             </div>
                 </div>
