--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 A software engineer.
             </h1>
             <p>
-                I am  a software engineer passionate about developing performant applications, and solving 
-                complex problems. I am also skilled in networking and interested in distrubted systems. 
+                I am  a software engineer passionate about building high-performance applications, solving complex challenges, as well as enhancing and architecting distributed systems
             </p>
             <div class="btn-con">
                 <a href="CV-Zahdi.Mohcine.pdf" class="main-btn">
