Fixing a minor problem in the lines alignement

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
             
             </div>
             <div class="about-stats">
-                <h4 class="stat-title">Some of my Skills</h4>
+                <div class = "stat-title">
+
+                <h4 >Some of my Skills</h4>
+                </div>
                 <div class="progress-bars">
                     <div class="progress-bar">
                         <div class="prog-title">Java</div>
@@ -166,7 +169,9 @@
                     </div>
                 </div>
             </div>
-            <h4 class = "stat-title"> My Timeline</h4>
+            <div class = "stat-title">
+            <h4 > My Timeline</h4>
+            </div>
             <div class="time-line">
                 <div class="timeline-item">
                     <div class="t1-icon">
